<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".rockPaperScissors"
    tools:showIn="@layout/activity_rock_paper_scissors">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rockPaperScissors" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooseWeapon" />

        <Button
            android:id="@+id/rockButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="rockClicked"
            android:text="@string/rock" />

        <Button
            android:id="@+id/paperButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="paperClicked"
            android:text="@string/paper" />

        <Button
            android:id="@+id/scissorsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="scissorsClicked"
            android:text="@string/scissors" />

        <TextView
            android:id="@+id/scoreKeeper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score" />

        <TextView
            android:id="@+id/playerWeapon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playerWeapon" />

        <TextView
            android:id="@+id/computerWeapon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computerWeapon" />

        <TextView
            android:id="@+id/winnerField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/winner" />

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>